--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.2.0",
     "pg": "^8.13.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
