--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start ",
     "lint": "next lint",
     "ssr": "node ./app/server.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.21.2",
-    "next": "15.2.0",
+    "next": "15.3.2",
     "pg": "^8.13.3",
-    "react": "^19.0.0",
+    "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -24,11 +24,15 @@
     "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.3",
+    "@types/react-dom": "19.1.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.9",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.3",
+    "@types/react-dom": "19.1.3"
   }
 }
