Add new API route and components for hourly weather data visualization
- Introduced `bme-hourly` API route to fetch hourly weather data.
- Created `HomeCharts` component to display temperature, humidity, and pressure using charts.
- Developed `HourlyChartHome` component for rendering individual charts with responsive design.
- Updated `HomeData` component to include `HomeCharts` for enhanced data presentation.
- Added necessary dependencies for charting and data handling.

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "next build",
     "start": "next start ",
     "lint": "next lint",
-    "ssr": "node ./app/server.ts"
+    "ssr": "node ./app/server.ts",
+    "worker": "ts-node lib/redis/worker.ts"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.56.0",
     "express": "^4.21.2",
+    "ioredis": "^5.6.1",
     "next": "15.3.2",
     "pg": "^8.13.3",
     "react": "19.1.0",
